--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,6 +14,7 @@
 }
 
 body, html{
+    
     background-color: #5f2c82;
     height: 100vh;
     width: 100vw;
@@ -38,6 +39,8 @@ main{
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.448);
+    transition: width 0.3s, height 0.3;
+    transition-timing-function: ease;
 }
 
 #login > #imagem{
