--- a/estilos/style.css
+++ b/estilos/style.css
@@ -39,7 +39,7 @@ main{
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.448);
-    transition: width 0.3s, height 0.3;
+    transition: width 0.3s, height 0.3s;
     transition-timing-function: ease;
 }
 
@@ -54,4 +54,13 @@ main{
 #login > #formulario{
     padding: 10px;
     display: block;
+}
+
+#formulario > h1{
+    text-align: center;
+    padding: 10px;
+}
+
+#formulario > p{
+    font-size: 0.8em;
 }
