--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,7 +36,7 @@ main{
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 510px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.448);
     transition: width 0.3s, height 0.3s;
@@ -63,4 +63,53 @@ main{
 
 #formulario > p{
     font-size: 0.8em;
+}
+
+form > .campo{
+    background-color: #5f2c82;
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+.campo > label{
+    display: none;
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color:#49a09d ;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+form > input[type=submit]:hover{
+    background-color: #295a58;
+    cursor: pointer;
+}
+
+form > .botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: white;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #1a5e5c;
+    padding-top: 5px;
+    margin-top: 5px;
+}
+
+form > .botao:hover{
+    background-color: #295a58;
+    color: white;
 }
