--- a/estilos/style.css
+++ b/estilos/style.css
@@ -26,11 +26,14 @@ main{
     width: 100vw;
 }
 
+main h1{
+    color: #51266d;
+}
+
 #login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
 
@@ -39,6 +42,8 @@ main{
     height: 510px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.448);
+
+    transform: translate(-50%, -50%);
     transition: width 0.3s, height 0.3s;
     transition-timing-function: ease;
 }
@@ -67,11 +72,34 @@ main{
 
 form > .campo{
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     width: 100%;
     display: block;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
+}
+
+.campo > span{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+.campo > input{
+    background-color: #56bcb8;
+    font: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: none;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-13px);
+}
+
+.campo > input:focus-within{
+    background-color: rgba(255, 255, 255, 0.456);
 }
 
 .campo > label{
